fix outlier highlighting, add scrolling
style for outliers in show_trait.css had extra space
and wasn't recognized; also bootstrap overlapped it,
so I added '!important';

I also decided to make the table of values scrollable,
so that user can edit a large dataset and see changes in the plots

--- a/wqflask/wqflask/static/new/css/show_trait.css
+++ b/wqflask/wqflask/static/new/css/show_trait.css
@@ -1,7 +1,11 @@
-tr .outlier {
-    background-color: #ffff99;
+tr.outlier {
+    background-color: #ffff99 !important;
 }
 
 #bar_chart_container {
     overflow-x:scroll;
+}
+
+.dataTables_scrollBody {
+    overflow-x: hidden !important;
 }
